RaylibSharp/Raylib.cs


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color); // Draw a circle in 3D world space

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCube(Vector3 position, float width, float height, float length, Color color);             // Draw cube

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCubeV(Vector3 position, Vector3 size, Color color);                                       // Draw cube (Vector version)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);        // Draw cube wires

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCubeWiresV(Vector3 position, Vector3 size, Color color);                                  // Draw cube wires (Vector version)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color); // Draw cube textured

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawSphere(Vector3 centerPos, float radius, Color color);                                     // Draw sphere

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawSphereEx(Vector3 centerPos, float radius, int rings, int slices, Color color);            // Draw sphere with extended parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawSphereWires(Vector3 centerPos, float radius, int rings, int slices, Color color);         // Draw sphere wires

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCylinder(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); // Draw a cylinder/cone

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawCylinderWires(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); // Draw a cylinder/cone wires

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawPlane(Vector3 centerPos, Vector2 size, Color color);                                      // Draw a plane XZ

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawRay(Ray ray, Color color);                                                                // Draw a ray line

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawGrid(int slices, float spacing);                                                          // Draw a grid (centered at (0, 0, 0))

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawGizmo(Vector3 position);                                                                  // Draw simple gizmo
																																//DrawTorus(), DrawTeapot() could be useful?

		//------------------------------------------------------------------------------------
		// Model 3d Loading and Drawing Functions (Module: models)
		//------------------------------------------------------------------------------------

		// Model loading/unloading functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Model LoadModel(string fileName);                                                            // Load model from files (meshes and materials)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Model LoadModelFromMesh(Mesh mesh);                                                               // Load model from generated mesh (default material)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnloadModel(Model model);                                                                    // Unload model from memory (RAM and/or VRAM)

		// Mesh loading/unloading functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh* LoadMeshes(string fileName, int* meshCount);                                           // Load meshes from model file

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ExportMesh(Mesh mesh, string fileName);                                                 // Export mesh data to file

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnloadMesh(Mesh mesh);                                                                       // Unload mesh from memory (RAM and/or VRAM)

		// Material loading/unloading functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Material* LoadMaterials(string fileName, int* materialCount);                                // Load materials from model file

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Material LoadMaterialDefault();                                                               // Load default material (Supports: DIFFUSE, SPECULAR, NORMAL maps)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnloadMaterial(Material material);                                                           // Unload material from GPU memory (VRAM)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetMaterialTexture(Material* material, MaterialMapType mapType, Texture2D texture);                      // Set texture for a material map type (MAP_DIFFUSE, MAP_SPECULAR...)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetModelMeshMaterial(Model* model, int meshId, int materialId);                              // Set material for a mesh

		// Model animations loading/unloading functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern ModelAnimation* LoadModelAnimations(string fileName, int* animsCount);                       // Load model animations from file

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UpdateModelAnimation(Model model, ModelAnimation anim, int frame);                           // Update model animation pose

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnloadModelAnimation(ModelAnimation anim);                                                   // Unload animation data

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsModelAnimationValid(Model model, ModelAnimation anim);                                     // Check model animation skeleton match

		// Mesh generation functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshPoly(int sides, float radius);                                                        // Generate polygonal mesh

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshPlane(float width, float length, int resX, int resZ);                                 // Generate plane mesh (with subdivisions)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshCube(float width, float height, float length);                                        // Generate cuboid mesh

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshSphere(float radius, int rings, int slices);                                          // Generate sphere mesh (standard sphere)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshHemiSphere(float radius, int rings, int slices);                                      // Generate half-sphere mesh (no bottom cap)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshCylinder(float radius, float height, int slices);                                     // Generate cylinder mesh

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshTorus(float radius, float size, int radSeg, int sides);                               // Generate torus mesh

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshKnot(float radius, float size, int radSeg, int sides);                                // Generate trefoil knot mesh

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshHeightmap(Image heightmap, Vector3 size);                                             // Generate heightmap mesh from image data

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Mesh GenMeshCubicmap(Image cubicmap, Vector3 cubeSize);                                           // Generate cubes-based map mesh from image data

		// Mesh manipulation functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern BoundingBox MeshBoundingBox(Mesh mesh);                                                           // Compute mesh bounding box limits

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void MeshTangents(Mesh* mesh);                                                                    // Compute mesh tangents

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void MeshBinormals(Mesh* mesh);                                                                   // Compute mesh binormals

		// Model drawing functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawModel(Model model, Vector3 position, float scale, Color tint);                           // Draw a model (with texture if set)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawModelEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); // Draw a model with extended parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawModelWires(Model model, Vector3 position, float scale, Color tint);                      // Draw a model wires (with texture if set)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawModelWiresEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); // Draw a model wires (with texture if set) with extended parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawBoundingBox(BoundingBox box, Color color);                                               // Draw bounding box (wires)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawBillboard(Camera3D camera, Texture2D texture, Vector3 center, float size, Color tint);     // Draw a billboard texture

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawBillboardRec(Camera3D camera, Texture2D texture, Rectangle sourceRec, Vector3 center, float size, Color tint); // Draw a billboard texture defined by sourceRec

		// Collision detection functions
